# memer.rs

./: .env.example  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml  publish.yml
src/: config.rs  main.rs  utils.rs
src/prompts/: base.jinja
