[package]
name = "member-rs"
version = "0.1.0"
edition = "2024"
description="a meme generation rust cli tool"
license="Apache-2.0"
repository="https://github.com/Programmer-RD-AI/memer.rs"
readme="README.md"

[dependencies]
async-openai = "0.29.3"
clap = { version = "4.5.47", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
dotenv = "0.15.0"
minijinja = "2.12.0"

[dependencies.uuid]
version = "1.18.1"
features = ["v4"]

