[package]
name = "memer-rs"
version = "0.1.0"
edition = "2024"
description="a meme generation rust cli tool"
license="Apache-2.0"
repository="https://github.com/Programmer-RD-AI/memer.rs"
readme="README.md"

[dependencies]
async-openai = "0.29.3"
clap = { version = "4.5.47", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
dotenv = "0.15.0"
minijinja = "2.12.0"
env_logger = "0.11.8"
log = "0.4.28"
clap-verbosity-flag = "3.0.4"
indicatif = "0.18.0"

[dependencies.uuid]
version = "1.18.1"
features = ["v4"]

[[bin]]
name = "memer"
path = "src/main.rs"
